✨ 메인페이지 바인딩, 상세페이지 api확인